--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -61,8 +61,8 @@
     <EmbeddedResource Include="$(PkgSystem_Runtime_CompilerServices_Unsafe)/lib/net461/System.Runtime.CompilerServices.Unsafe.dll" Visible="false" />
   </ItemGroup>
 
-  <Target Name="NuGetConfig" AfterTargets="PostBuildEvent">
-    <WriteLinesToFile File="$(TargetDir)NuGet.config"
+  <Target Name="NuGetConfig" AfterTargets="Build">
+    <WriteLinesToFile File="$(OutputPath)NuGet.config"
                       Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(PackageOutputPath)'))"
                       Overwrite="true"
                       WriteOnlyWhenDifferent="true" />
